--- a/index.html
+++ b/index.html
@@ -4,88 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>გადმოწერა იოლი ლოცვანი</title>
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial,
-          sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        min-height: 100vh;
-        margin: 0;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        color: white;
-      }
-      .container {
-        text-align: center;
-        padding: 30px;
-      }
-      .loader {
-        border: 3px solid rgba(255, 255, 255, 0.3);
-        border-radius: 50%;
-        border-top: 3px solid white;
-        width: 50px;
-        height: 50px;
-        animation: spin 1s linear infinite;
-        margin: 20px auto;
-      }
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-      .buttons {
-        margin-top: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-      }
-      .store-badge {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 0.2s;
-      }
-      .store-badge:hover {
-        transform: scale(1.05);
-      }
-      .store-badge img {
-        display: block;
-      }
 
-      /* Individual sizes for each badge */
-      .app-store-badge img {
-        width: 160px;
-        height: auto;
-        border-radius: 10px;
-      }
-
-      .play-store-badge img {
-        margin-top: 1rem;
-        width: 160px;
-        height: auto;
-        border-radius: 10px;
-      }
-      .app-icon {
-        width: 120px;
-        height: 120px;
-        border-radius: 25px; /* Rounded corners like iOS icons */
-        margin-top: 20px;
-        margin-bottom: 0px;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); /* Nice shadow */
-        background-color: #f8f8f8;
-      }
-      .views {
-        margin-top: 20px;
-        color: #f8f8f8;
-        font-size: 0.95rem;
-        font-weight: 500;
-      }
-    </style>
+     <!-- External Resources -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="shareComp/shareComp.css" />
+     <link rel="stylesheet" href="profile/styles.css" />
+    <link rel="stylesheet" href="socialNetworks/socialNetworks.css" />
   </head>
   <body>
     <div class="container">
@@ -95,23 +30,30 @@
         alt="IoliLocvani Icon"
         class="app-icon"
       />
-      <h1>იოლი ლოცვანი</h1>
-      <h1>IoliLocvani</h1>
+      <h1>იოლი ლოცვანი - IoliLocvani</h1>
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
       <div class="buttons" id="fallback" style="display: none">
-        <a
-          href="https://apps.apple.com/us/app/iolilocvani/id6754865510"
-          class="store-badge app-store-badge"
-        >
-          <img src="assets/appstore.png" alt="Download on the App Store" />
-        </a>
-        <a
-          href="https://play.google.com/store/apps/details?id=com.lupusa87.ioliLocvani"
-          class="store-badge play-store-badge"
-        >
-          <img src="assets/googleplay.png" alt="Get it on Google Play" />
-        </a>
+        <div class="store-badges">
+          <a
+            href="https://apps.apple.com/us/app/iolilocvani/id6754865510"
+            class="store-badge app-store-badge"
+          >
+            <img src="assets/appstore.png" alt="Download on the App Store" />
+          </a>
+          <a
+            href="https://play.google.com/store/apps/details?id=com.lupusa87.ioliLocvani"
+            class="store-badge play-store-badge"
+          >
+            <img src="assets/googleplay.png" alt="Get it on Google Play" />
+          </a>
+        </div>
+
+        <div id="social-networks-container" class="social-networks-placeholder" aria-live="polite"></div>
+
+        <div id="share-section-placeholder"></div>
+
+        <div id="profile-container" class="profile-placeholder" aria-live="polite"></div>
 
         <div class="views" aria-label="Page views">
           ნახვა: <span id="visitCount">...</span>
@@ -119,57 +61,28 @@
       </div>
     </div>
 
+    <script src="shareComp/shareComp.js"></script>
+    <script src="profile/script.js"></script>
+    <script src="socialNetworks/socialNetworks.js"></script>
+    <script src="script.js"></script>
+
     <script>
-      // Your app store URLs
-      const IOS_URL = "https://apps.apple.com/us/app/iolilocvani/id6754865510";
-      const ANDROID_URL =
-        "https://play.google.com/store/apps/details?id=com.lupusa87.ioliLocvani";
+      document.addEventListener("DOMContentLoaded", async () => {
+         console.log("called2");
+  const container = document.getElementById("share-section-placeholder");
 
-      async function detectPlatformAndRedirect() {
-        const userAgent =
-          navigator.userAgent || navigator.vendor || window.opera;
+  const res = await fetch("shareComp/shareComp.html");
 
-        // Count visit FIRST (wait for it)
-        await updateVisitorCount();
+  console.log(res.text);
+  container.innerHTML = await res.text();
+    console.log(container.innerHTML);
 
-        // Detect iOS - REDIRECT AFTER COUNTING
-        if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-          window.location.href = IOS_URL;
-          return;
-        }
 
-        // Detect Android - REDIRECT AFTER COUNTING
-        if (/android/i.test(userAgent)) {
-          window.location.href = ANDROID_URL;
-          return;
-        }
-
-        // Desktop or unknown - show both options IMMEDIATELY
-        document.querySelector(".loader").style.display = "none";
-        document.getElementById("message").textContent = "აირჩიეთ პლატფორმა:";
-        document.getElementById("fallback").style.display = "block";
-      }
-
-      async function updateVisitorCount() {
-        const counterEl = document.getElementById("visitCount");
-        if (!counterEl) return;
-
-        try {
-          const response = await fetch(
-            "https://counterapi.com/api/lupusa87vakhtangiabashidze-ka-eng/view/iolidownload"
-          );
-          if (!response.ok) throw new Error("Counter API request failed");
-
-          const data = await response.json();
-          counterEl.textContent = data.value || "0";
-        } catch (error) {
-          console.error("Failed to update visitor count:", error);
-          counterEl.textContent = "შეცდომა";
-        }
-      }
-
-      // Run detection (which now includes counting)
-      detectPlatformAndRedirect();
+  ShareWidget.initShareSection({
+    title: "იოლი ლოცვანის გადმოწერა",
+    url: "https://lupusa87.github.io/public/",
+  });
+});
     </script>
   </body>
 </html>
