--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>გადმოწერა იოლი ლოცვანი</title>
 
-     <!-- External Resources -->
+    <!-- External Resources -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -13,13 +13,13 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMн13TZye+giMm8e2LwA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="shareComp/shareComp.css" />
-     <link rel="stylesheet" href="profile/styles.css" />
+    <link rel="stylesheet" href="profile/styles.css" />
     <link rel="stylesheet" href="socialNetworks/socialNetworks.css" />
   </head>
   <body>
@@ -31,58 +31,89 @@
         class="app-icon"
       />
       <h1>იოლი ლოცვანი - IoliLocvani</h1>
+
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
+
       <div class="buttons" id="fallback" style="display: none">
         <div class="store-badges">
+          <!-- App Store (shown on iOS, also on desktop) -->
           <a
             href="https://apps.apple.com/us/app/iolilocvani/id6754865510"
             class="store-badge app-store-badge"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="display: inline-block"
           >
             <img src="assets/appstore.png" alt="Download on the App Store" />
           </a>
+
+          <!-- Google Play (shown on Android, also on desktop) -->
           <a
             href="https://play.google.com/store/apps/details?id=com.lupusa87.ioliLocvani"
             class="store-badge play-store-badge"
+            target="_blank"
+            rel="noopener noreferrer"
+            style="display: inline-block"
           >
             <img src="assets/googleplay.png" alt="Get it on Google Play" />
           </a>
         </div>
 
-        <div id="social-networks-container" class="social-networks-placeholder" aria-live="polite"></div>
+        <div
+          id="social-networks-container"
+          class="social-networks-placeholder"
+          aria-live="polite"
+        ></div>
 
         <div id="share-section-placeholder"></div>
 
-        <div id="profile-container" class="profile-placeholder" aria-live="polite"></div>
+        <div
+          id="profile-container"
+          class="profile-placeholder"
+          aria-live="polite"
+        ></div>
 
         <div class="views" aria-label="Page views">
-          ნახვა: <span id="visitCount">...</span>
+          ნახვები: <span id="visitCount">...</span>
         </div>
       </div>
     </div>
 
+    <!-- External JS modules -->
     <script src="shareComp/shareComp.js"></script>
     <script src="profile/script.js"></script>
     <script src="socialNetworks/socialNetworks.js"></script>
     <script src="script.js"></script>
 
+    <!-- Load share component HTML + init share widget -->
     <script>
       document.addEventListener("DOMContentLoaded", async () => {
-         console.log("called2");
-  const container = document.getElementById("share-section-placeholder");
+ 
 
-  const res = await fetch("shareComp/shareComp.html");
+        const container = document.getElementById("share-section-placeholder");
 
-  console.log(res.text);
-  container.innerHTML = await res.text();
-    console.log(container.innerHTML);
+        try {
+          const res = await fetch("shareComp/shareComp.html");
+          const html = await res.text();
+ 
+          container.innerHTML = html;
 
-
-  ShareWidget.initShareSection({
-    title: "იოლი ლოცვანის გადმოწერა",
-    url: "https://lupusa87.github.io/public/",
-  });
-});
+          if (
+            window.ShareWidget &&
+            typeof ShareWidget.initShareSection === "function"
+          ) {
+            ShareWidget.initShareSection({
+              title: "იოლი ლოცვანის გადმოწერა",
+              url: "https://lupusa87.github.io/public/",
+            });
+          } else {
+            console.warn("ShareWidget.initShareSection not available");
+          }
+        } catch (err) {
+          console.error("Failed to load shareComp HTML:", err);
+        }
+      });
     </script>
   </body>
 </html>
