--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     <link rel="stylesheet" href="shareComp/shareComp.css" />
     <link rel="stylesheet" href="profile/styles.css" />
     <link rel="stylesheet" href="socialNetworks/socialNetworks.css" />
+
+    <meta name="google-site-verification" content="Xyr2QWlJ2HT0KiIl9Bn4MGKW0Hm5-ZJchXFNrLpZxUw" />
   </head>
   <body>
     <div class="container">
