--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>მობილური აპლიკაცია</h2>
+      <h2>უფასო მობილური აპლიკაცია</h2>
       <img
         src="assets/ioliLocvaniIcon.png"
         alt="IoliLocvani Icon"
