--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>იოლი ლოცვანი - Orthodox Christian Prayer App (IoliLocvani)</title>
+    <title>იოლი ლოცვანი - Orthodox Christian Prayer App (Ioli Locvani)</title>
     <meta
       name="description"
-      content="იოლი ლოცვანი — 7-გზის ლოცვების აპლიკაცია: შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, იოლილოცვანი, იოლი ლოცვანი. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
+      content="იოლი ლოცვანი — უფასო მართლმადიდებლური აპლიკაცია: დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, იოლილოცვანი, იოლი ლოცვანი. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
     />
     <meta
       name="keywords"
-      content="iolilocvani, IoliLocvani, იოლილოცვანი, იოლი ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
+      content="iolilocvani, IoliLocvani, იოლილოცვანი, იოლი ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
     />
     <meta name="author" content="ვახტანგ აბაშიძე (Vakhtangi Abashidze)" />
 
@@ -28,7 +28,7 @@
     <meta property="og:title" content="იოლი ლოცვანი - IoliLocvani" />
     <meta
       property="og:description"
-      content="7-გზის ლოცვების აპლიკაცია."
+      content="მართლმადიდებლური ლოცვანის აპლიკაცია."
     />
     <!-- Optional preview image (uncomment when you have it) -->
     <!-- <meta property="og:image" content="https://lupusa87.github.io/public/assets/iolilocvani-preview.png" /> -->
@@ -42,7 +42,7 @@
     />
     <meta
       name="twitter:description"
-      content="იოლი ლოცვანი — 7-გზის ლოცვების აპლიკაცია - ვახტანგი აბაშიძე"
+      content="იოლი ლოცვანი — უფასო მართლმადიდებლური აპლიკაცია - ვახტანგი აბაშიძე"
     />
     <!-- <meta name="twitter:image" content="https://lupusa87.github.io/public/assets/iolilocvani-preview.png" /> -->
 
@@ -76,13 +76,14 @@
   </head>
   <body>
     <div class="container">
-      <h2>უფასო მობილური აპლიკაცია</h2>
+      <h2>მართლმადიდებლური მობილური აპლიკაცია</h2>
+      <h2>უფასო და რეგისტრაციის გარეშე</h2>
       <img
         src="assets/ioliLocvaniIcon.png"
         alt="IoliLocvani Icon"
         class="app-icon"
       />
-      <h1>იოლი ლოცვანი - IoliLocvani</h1>
+      <h1>იოლი ლოცვანი - Ioli Locvani</h1>
 
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
