--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="iolilocvani, IoliLocvani, იოლილოცვანი, იოლი ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
+      content="locvani, Locvani, locvani ioli, Locvani Ioli, ლოცვანი იოლი, იოლი ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
     />
     <meta name="author" content="ვახტანგ აბაშიძე (Vakhtangi Abashidze)" />
 
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lupusa87.github.io/public/" />
-    <meta property="og:title" content="იოლი ლოცვანი - IoliLocvani" />
+    <meta property="og:title" content="ლოცვანი იოლი" />
     <meta
       property="og:description"
       content="მართლმადიდებლური ლოცვანის აპლიკაცია."
@@ -38,11 +38,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="IoliLocvani - იოლი ლოცვანი"
+      content="ლოცვანი იოლი"
     />
     <meta
       name="twitter:description"
-      content="იოლი ლოცვანი — უფასო მართლმადიდებლური აპლიკაცია - ვახტანგი აბაშიძე"
+      content="ლოცვანი იოლი — უფასო მართლმადიდებლური აპლიკაცია - ვახტანგი აბაშიძე"
     />
     <!-- <meta name="twitter:image" content="https://lupusa87.github.io/public/assets/iolilocvani-preview.png" /> -->
 
@@ -83,7 +83,7 @@
         alt="IoliLocvani Icon"
         class="app-icon"
       />
-      <h1>იოლი ლოცვანი - Ioli Locvani</h1>
+      <h1>ლოცვანი იოლი - Locvani Ioli</h1>
 
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
