--- a/socialNetworks/socialNetworks.html
+++ b/socialNetworks/socialNetworks.html
@@ -3,7 +3,7 @@
   <nav class="social-links" aria-label="Social media links">
     <a
       class="social-button facebook"
-      href="https://www.facebook.com/IoliLocvani"
+      href="https://www.facebook.com/locvani"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Visit Facebook page"
@@ -23,7 +23,7 @@
 
     <a
       class="social-button instagram"
-      href="https://www.instagram.com/iolilocvani/"
+      href="https://www.instagram.com/locvani/"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Visit Instagram page"
