--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>იოლი ლოცვანი - Orthodox Christian Prayer App (Ioli Locvani)</title>
+    <title>ლოცვანი იოლი - Orthodox Christian Prayer App (Locvani Ioli)</title>
     <meta
       name="description"
-      content="იოლი ლოცვანი — უფასო მართლმადიდებლური აპლიკაცია: დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, იოლილოცვანი, იოლი ლოცვანი. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
+      content="ლოცვანი იოლი — უფასო მართლმადიდებლური აპლიკაცია: დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, ლოცვანიიოლი, ლოცვანი იოლი. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
     />
     <meta
       name="keywords"
@@ -83,7 +83,7 @@
         alt="IoliLocvani Icon"
         class="app-icon"
       />
-      <h1>ლოცვანი იოლი - Locvani Ioli</h1>
+      <h1>ლოცვანი იოლი</h1>
 
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
@@ -157,7 +157,7 @@
             typeof ShareWidget.initShareSection === "function"
           ) {
             ShareWidget.initShareSection({
-              title: "იოლი ლოცვანის გადმოწერა",
+              title: "ლოცვანი იოლის გადმოწერა",
               url: "https://lupusa87.github.io/public/",
             });
           } else {
