--- a/socialNetworks/socialNetworks.html
+++ b/socialNetworks/socialNetworks.html
@@ -1,5 +1,5 @@
 <section class="social-networks">
-  <h2 class="social-networks-name">იოლი ლოცვანი სოც. ქსელებში</h2>
+  <h2 class="social-networks-name">ლოცვანი იოლი სოც. ქსელებში</h2>
   <nav class="social-links" aria-label="Social media links">
     <a
       class="social-button facebook"
