--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>ლოცვანი იოლი - Orthodox Christian Prayer App (Locvani Ioli)</title>
+    <title>ლოცვანი „იო“ - Orthodox Christian Prayer App (Locvani Io)</title>
     <meta
       name="description"
-      content="ლოცვანი იოლი — უფასო მართლმადიდებლური აპლიკაცია: დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, ლოცვანიიოლი, ლოცვანი იოლი. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
+      content="ლოცვანი „იო“ — უფასო მართლმადიდებლური აპლიკაცია: დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, ლოცვანი, ლოცვანი„იო“, ლოცვანი „იო“. App by ვახტანგ აბაშიძე (Vakhtangi Abashidze)."
     />
     <meta
       name="keywords"
-      content="locvani, Locvani, locvani ioli, Locvani Ioli, ლოცვანი იოლი, იოლი ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
+      content="locvani, Locvani, locvani io, Locvani Io, ლოცვანი „იო“, „იო“ ლოცვანი, ლოცვანი, შვიდგზის ლოცვა, დილის ლოცვა, საღამოს ლოცვა, ზიარების ლოცვები, დედის ლოცვა, შვიდგზის ლოცვები, 7-გზის ლოცვა, 7-გზის ლოცვები, მართლმადიდებლობა, მართლმადიდებელი, ქრისტიანი, ქრისტიანობა, ქრისტე, ეკლესია, ქართული ლოცვები, ქართულ ენაზე ლოცვები, orthodox, orthodoxy, christian, prayer app, georgian prayer book, vakhtangi abashidze, ვახო აბაშიძე, ვახტანგ აბაშიძე, ვახტანგი აბაშიძე"
     />
     <meta name="author" content="ვახტანგ აბაშიძე (Vakhtangi Abashidze)" />
 
@@ -25,26 +25,26 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lupusa87.github.io/public/" />
-    <meta property="og:title" content="ლოცვანი იოლი" />
+    <meta property="og:title" content="ლოცვანი „იო“" />
     <meta
       property="og:description"
       content="მართლმადიდებლური ლოცვანის აპლიკაცია."
     />
     <!-- Optional preview image (uncomment when you have it) -->
-    <!-- <meta property="og:image" content="https://lupusa87.github.io/public/assets/iolilocvani-preview.png" /> -->
+    <!-- <meta property="og:image" content="https://lupusa87.github.io/public/assets/iolocvani-preview.png" /> -->
     <meta property="og:locale" content="ka_GE" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="ლოცვანი იოლი"
+      content="ლოცვანი „იო“"
     />
     <meta
       name="twitter:description"
-      content="ლოცვანი იოლი — უფასო მართლმადიდებლური აპლიკაცია - ვახტანგი აბაშიძე"
+      content="ლოცვანი „იო“ — უფასო მართლმადიდებლური აპლიკაცია - ვახტანგი აბაშიძე"
     />
-    <!-- <meta name="twitter:image" content="https://lupusa87.github.io/public/assets/iolilocvani-preview.png" /> -->
+    <!-- <meta name="twitter:image" content="https://lupusa87.github.io/public/assets/iolocvani-preview.png" /> -->
 
     <!-- iOS Smart Banner -->
     <meta name="apple-itunes-app" content="app-id=6754865510" />
@@ -79,11 +79,11 @@
       <h3>მართლმადიდებლური მობილური აპლიკაცია</h3>
       <h2>უფასო და რეგისტრაციის გარეშე</h2>
       <img
-        src="assets/ioliLocvaniIcon.png"
-        alt="IoliLocvani Icon"
+        src="assets/locvaniIoIcon.png"
+        alt="Locvani Io Icon"
         class="app-icon"
       />
-      <h1>ლოცვანი იოლი</h1>
+      <h1>ლოცვანი „იო“</h1>
 
       <div class="loader"></div>
       <p id="message">მიმდინარეობს გადამისამართება...</p>
@@ -92,7 +92,7 @@
         <div class="store-badges">
           <!-- App Store (shown on iOS, also on desktop) -->
           <a
-            href="https://apps.apple.com/us/app/iolilocvani/id6754865510"
+            href="https://apps.apple.com/app/id6754865510"
             class="store-badge app-store-badge"
             target="_blank"
             rel="noopener noreferrer"
@@ -157,7 +157,7 @@
             typeof ShareWidget.initShareSection === "function"
           ) {
             ShareWidget.initShareSection({
-              title: "ლოცვანი იოლის გადმოწერა",
+              title: "ლოცვანი „იო“ს გადმოწერა",
               url: "https://lupusa87.github.io/public/",
             });
           } else {
